--- a/client/src/index.html
+++ b/client/src/index.html
@@ -8,7 +8,9 @@
 
 </head>
 <body>
-    <div id="root">not rendered</div>
+    <div id="root">
+        
+    </div>
     <script type="module" src="index.jsx"></script>
 </body>
 </html> 
